// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli fails when multiple queries have the same name 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/duplicate-names/schema.json' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/duplicate-names/schema.ts'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/duplicate-names/schema.ts

 ERROR  GraphQL operations must have a unique name. The operation FindPerson is declared in:
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query1/FindPersonsQuery.graphql
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query2/FindPersonQuery.graphql
Error: GraphQL operations must have a unique name. The operation FindPerson is declared in:
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query1/FindPersonsQuery.graphql
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query2/FindPersonQuery.graphql
    at duplicateOperations.forEach (packages/graphql-typescript-definitions/lib/index.js)
    at Array.forEach (<anonymous>)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)
    at Generator.next (<anonymous>)
    at packages/graphql-typescript-definitions/lib/index.js
    at new Promise (<anonymous>)
    at __awaiter (packages/graphql-typescript-definitions/lib/index.js)
    at Builder.generateDocumentTypes (packages/graphql-typescript-definitions/lib/index.js)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)
    at Generator.next (<anonymous>)

",
}
`;

exports[`cli fails when there are syntax errors 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.json' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.ts'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.ts
 ERROR  Syntax Error: Expected {, found Name \\"name\\"
GraphQLError: Syntax Error: Expected {, found Name \\"name\\"
    at syntaxError (node_modules/graphql/error/syntaxError.js)
    at expect (node_modules/graphql/language/parser.js)
    at many (node_modules/graphql/language/parser.js)
    at parseSelectionSet (node_modules/graphql/language/parser.js)
    at parseFragmentDefinition (node_modules/graphql/language/parser.js)
    at parseExecutableDefinition (node_modules/graphql/language/parser.js)
    at parseDefinition (node_modules/graphql/language/parser.js)
    at parseDocument (node_modules/graphql/language/parser.js)
    at Object.parse (node_modules/graphql/language/parser.js)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)

",
}
`;

exports[`cli fails when there are syntax errors 2`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/documents/**/*.graphql' --schema-path 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.ts'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
Error: Error parsing 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json':

ENOENT: no such file or directory, open 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json'
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)
    at Generator.throw (<anonymous>)
    at rejected (packages/graphql-typescript-definitions/lib/index.js)
    at <anonymous>

",
}
`;

exports[`cli fails when there are unused types 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/schema.ts

 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Fragment.graphql.d.ts
",
}
`;

exports[`cli succeeds when there are no fixture errors 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/schema.ts

 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql.d.ts
",
}
`;
